--- a/style.css
+++ b/style.css
@@ -3,3 +3,32 @@
   margin: 0;
   box-sizing: border-box;
 }
+.nav {
+  height: 100vh;
+  background-image: url(./images/mike-kenneally-zlwDJoKTuA8-unsplash.jpg);
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+}
+.nav-bar {
+  display: flex;
+  padding: 40px 120px;
+}
+.nav-link {
+  flex: 1;
+}
+.nav-link ul {
+  margin-left: 50px;
+  display: inline;
+}
+.nav-link ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 25px;
+}
+.nav-link ul a {
+  color: #78290f;
+  text-decoration: none;
+  font-size: 20px;
+}
