--- a/style.css
+++ b/style.css
@@ -13,8 +13,19 @@
 }
 .nav-bar {
   display: flex;
-  padding: 40px 120px;
+  padding: 35px 100px;
 }
+.nav-logo {
+  font-size: 50px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  border: solid white;
+  margin-left: 20px;
+}
+span {
+  color: white;
+}
+
 .nav-link {
   flex: 1;
 }
@@ -31,4 +42,16 @@
   color: #78290f;
   text-decoration: none;
   font-size: 20px;
+}
+.nav-link ul li::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: rgb(41, 38, 38);
+  display: block;
+  margin: auto;
+  transition: 0.8s;
+}
+.nav-link ul li:hover::after {
+  width: 100%;
 }
