--- a/style.css
+++ b/style.css
@@ -106,24 +106,24 @@ i:hover {
   border: solid rgb(0, 0, 0);
   margin-left: 20px;
 }
-.nav-link {
+.about-nav-link {
   flex: 1;
 }
-.nav-link ul {
+.about-nav-link ul {
   margin-left: 50px;
   display: inline;
 }
-.nav-link ul li {
+.about-nav-link ul li {
   list-style: none;
   display: inline-block;
   padding: 8px 25px;
 }
-.nav-link ul a {
+.about-nav-link ul a {
   color: white;
   text-decoration: none;
   font-size: 20px;
 }
-.nav-link ul li::after {
+.about-nav-link ul li::after {
   content: "";
   width: 0%;
   height: 2px;
@@ -132,7 +132,7 @@ i:hover {
   margin: auto;
   transition: 0.8s;
 }
-.nav-link ul li:hover::after {
+.about-nav-link ul li:hover::after {
   width: 100%;
 }
 .about-banner-tittle h1 {
