--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ i:hover {
 
 .nav-contact {
   height: 100vh;
-  background-image: url(./images/nathan-dumlao-vbt-Fp3b5FA-unsplash.jpg);
+  background-image: url(./images/raimond-klavins-bJiLmqLSdAc-unsplash.jpg);
   background-position: center;
   background-size: cover;
   overflow: hidden;
@@ -177,7 +177,7 @@ i:hover {
   font-size: 50px;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
-  border: solid rgb(0, 0, 0);
+  border: solid black;
   margin-left: 20px;
 }
 .contact-nav-link {
@@ -219,4 +219,40 @@ i:hover {
 }
 .contact-nav-link .button {
   float: right;
+}
+.contact-details {
+  text-align: center;
+  font-size: 23px;
+  color: white;
+  margin-top: 30px;
+  margin-right: 50rem;
+}
+.contact-details h3 {
+  font-size: 2rem;
+  margin-top: 15px;
+  text-decoration: underline;
+}
+.contact-details p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-top: 20px;
+}
+.contact-nav-link li span {
+  color: black;
+}
+.social-icon {
+  text-align: center;
+  bottom: 0;
+  position: absolute;
+  padding-top: 27%;
+}
+.social-icon .fab {
+  color: #fff;
+  margin: 50px 25px;
+  display: block;
+  padding: 8px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  float: right;
+  margin-left: 70px;
 }
