--- a/style.css
+++ b/style.css
@@ -267,3 +267,43 @@ i:hover {
   overflow: hidden;
   position: relative;
 }
+.menu-logo {
+  color: black;
+  font-size: 50px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  border: solid white;
+  margin-left: 20px;
+}
+.menu-nav-link {
+  flex: 1;
+}
+.menu-nav-link ul {
+  margin-left: 50px;
+  display: inline;
+}
+.menu-nav-link ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 25px;
+}
+.menu-nav-link ul a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+.menu-nav-link ul li::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: white;
+  display: block;
+  margin: auto;
+  transition: 0.8s;
+}
+.menu-nav-link ul li:hover::after {
+  width: 100%;
+}
+.menu-nav-link .button {
+  float: right;
+}
