--- a/style.css
+++ b/style.css
@@ -261,14 +261,14 @@ i:hover {
 
 .nav-menu {
   height: 100vh;
-  background-image: url(./images/image\ 3.jpg);
+  background-image: url(./images/image\ 7.jpg);
   background-position: center;
   background-size: cover;
   overflow: hidden;
   position: relative;
 }
 .menu-logo {
-  color: black;
+  color: #fff;
   font-size: 50px;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
@@ -288,7 +288,7 @@ i:hover {
   padding: 8px 25px;
 }
 .menu-nav-link ul a {
-  color: black;
+  color: #fff;
   text-decoration: none;
   font-size: 20px;
 }
@@ -306,4 +306,27 @@ i:hover {
 }
 .menu-nav-link .button {
   float: right;
+}
+table {
+  width: 50px;
+  margin: 1rem 10rem;
+  width: 50%;
+  color: #fff;
+}
+th {
+  text-align: center;
+}
+table,
+th,
+td {
+  border: 5px solid white;
+  border-collapse: collapse;
+}
+th,
+td {
+  padding: 10px;
+  text-align: center;
+}
+.item {
+  text-align: left;
 }
