modified about background photo

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ i:hover {
 
 .nav-about {
   height: 100vh;
-  background-image: url(./images/image\ 6.jpg);
+  background-image: url(./images/ezra-jeffrey-comeau-xHHx89hdOqE-unsplash.jpg);
   background-position: center;
   background-size: cover;
   overflow: hidden;
