--- a/style.css
+++ b/style.css
@@ -403,3 +403,24 @@ td {
   border-radius: 10%;
   border: 3px solid black;
 }
+h2 {
+  text-align: center;
+  padding-top: 20px;
+  font-size: 2rem;
+}
+.card ul li {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bolder;
+  margin: 14px;
+  margin-left: 20px;
+  margin-top: 30px;
+}
+label {
+  font-size: 20px;
+  margin-left: 50px;
+}
+input {
+  margin: 42px;
+  margin-top: 20px;
+}
