--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ i:hover {
   position: relative;
 }
 .menu-logo {
-  color: #fff;
+  color: white;
   font-size: 50px;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
@@ -288,7 +288,7 @@ i:hover {
   padding: 8px 25px;
 }
 .menu-nav-link ul a {
-  color: #fff;
+  color: white;
   text-decoration: none;
   font-size: 20px;
 }
@@ -336,7 +336,7 @@ td {
 
 .nav-feedback {
   height: 100vh;
-  background-image: url(./images/ali-yahya-P_iaHlSUaNY-unsplash.jpg);
+  background-image: url(./images/halgatewood-com-bNbvJ-nkfd4-unsplash.jpg);
   background-position: center;
   background-size: cover;
   overflow: hidden;
@@ -347,11 +347,11 @@ td {
   padding: 35px 100px;
 }
 .feedback-logo {
-  color: #fff;
+  color: black;
   font-size: 50px;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
-  border: solid #fff;
+  border: solid black;
   margin-left: 20px;
 }
 .feedback-nav-link {
@@ -367,7 +367,7 @@ td {
   padding: 8px 25px;
 }
 .feedback-nav-link ul a {
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 20px;
 }
@@ -375,7 +375,7 @@ td {
   content: "";
   width: 0%;
   height: 2px;
-  background: white;
+  background: black;
   display: block;
   margin: auto;
   transition: 0.8s;
@@ -395,32 +395,37 @@ td {
   float: right;
 }
 .card {
-  width: 30%;
-  margin: 1rem 28rem;
+  width: 29%;
+  background-image: url(./images/joanna-kosinska-BIYoKb7Lux0-unsplash.jpg);
+  background-size: cover;
+  margin: 45px 53rem;
   height: 65%;
-  color: black;
-  background-color: white;
-  border-radius: 10%;
-  border: 3px solid black;
+  color: white;
+  box-shadow: 0 5px 10px rgba(0, 0, 2, 0.6);
+  border-radius: 5%;
+  overflow: visible;
+  cursor: pointer;
 }
-h2 {
-  text-align: center;
-  padding-top: 20px;
-  font-size: 2rem;
-}
+
 .card ul li {
   display: inline-block;
   font-size: 20px;
   font-weight: bolder;
-  margin: 14px;
-  margin-left: 20px;
-  margin-top: 30px;
+  margin: 4px;
+  margin-left: 30px;
+  margin-top: 4px;
+  padding-top: 10px;
 }
 label {
-  font-size: 20px;
-  margin-left: 50px;
+  font-size: 16px;
+  margin-left: 30px;
 }
 input {
-  margin: 42px;
-  margin-top: 20px;
+  margin: 7px;
+  margin-top: 5px;
+}
+i {
+  margin-right: -4px;
+  margin-left: 54px;
+  color: rgb(0, 217, 255);
 }
